# DomesticApp_WebApp

./: .gitignore  README.md  deployment.yaml  docker-compose.yml  package-lock.json
web_server/rust-server/domestik_app/: Cargo.toml  populate_migrations.sh  tables_definition.sql
web_server/rust-server/domestik_app/database/db/: tables_definition.sql
web_server/rust-server/domestik_app/go-server/: Dockerfile  go.mod  main.go
web_server/rust-server/domestik_app/go-server/bbdd/: mockdb.go
web_server/rust-server/domestik_app/go-server/test/: mockingdata.go
web_server/rust-server/domestik_app/migrations/: down.sql
web_server/rust-server/domestik_app/migrations/2023-11-27-143810_data/: up.sql
web_server/rust-server/domestik_app/scripts/: populate_migrations.sh
web_server/rust-server/domestik_app/src/: database.rs  main.rs  mod.rs  schema.rs
web_server/rust-server/domestik_app/src/domain/model/: client.rs  invoice.rs  job.rs  login.rs  mod.rs  new_user.rs  notification.rs  payment.rs  rating.rs  service.rs  user.rs  worker.rs
web_server/rust-server/domestik_app/src/domain/repository/: domestik_repository.rs  mod.rs
web_server/rust-server/domestik_app/src/infraestructure/: mod.rs
web_server/rust-server/domestik_app/src/infraestructure/database/: database_connection.rs  mod.rs
web_server/rust-server/domestik_app/src/infraestructure/jwt/: jwt_manager.rs  mod.rs
web_server/rust-server/domestik_app/src/mock-data/: services.json
web_server/rust-server/domestik_app/src/utils/json_reader/: mod.rs  (+1 more)
web_server/rust-server/domestik_app/src/views/: mod.rs
(+405 files in other folders)
